--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.1.8",
+    "screenfull": "^6.0.1",
     "socket.io-client": "^4.4.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
